# template_test_repo

./: .gitignore  BUILD.bazel  WORKSPACE  minimal-package-1.0.0.tgz  package.json
